--- a/dev/HighPrecisionInteger/index.html
+++ b/dev/HighPrecisionInteger/index.html
@@ -110,4 +110,36 @@ julia&gt; HighPrecisionInt(BigInt(2)^34+1) - HighPrecisionInt(3*BigInt(2)^31+1)
 HighPrecisionInt(10737418240, coeffs=[2147483648, 2])
 
 julia&gt; HighPrecisionInt(123) - HighPrecisionInt(0)
-HighPrecisionInt(123, coeffs=[123])</code></pre></li></ul></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../HighPrecisionLinearAlgebra/">High Precision Linear Algebra »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.12.0 on <span class="colophon-date" title="Saturday 14 June 2025 17:34">Saturday 14 June 2025</span>. Using Julia version 1.11.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+HighPrecisionInt(123, coeffs=[123])</code></pre></li><li><p><strong>Multiplication:</strong></p><p><code>Base.:*(a::HighPrecisionInt, b::HighPrecisionInt)</code>  </p><p>Multiplies <span>$a$</span> and <span>$b$</span> using long multiplication in base <span>$B$</span>. Partial products <span>$a_i \cdot b_j$</span> are accumulated with carry propagation.</p><p class="math-container">\[a \cdot b = \sum_{k=1}^{\text{len_a}} \sum_{l=1}^{\text{len_b}} (a_k \cdot b_l) \cdot B^{k+l-2}\]</p><p><strong>Usage</strong></p><pre><code class="language-julia-repl hljs">julia&gt; HighPrecisionInt(15) * HighPrecisionInt(8)
+HighPrecisionInt(120, coeffs=[120])
+
+julia&gt; HighPrecisionInt(15) * HighPrecisionInt(-8)
+HighPrecisionInt(-120, coeffs=[120])
+
+julia&gt; HighPrecisionInt(123) * HighPrecisionInt(0)
+HighPrecisionInt(0, coeffs=[])
+
+julia&gt; hpi_large_1 = HighPrecisionInt(BigInt(123456789012345))
+HighPrecisionInt(123456789012345, coeffs=[2249056121, 28744])
+
+julia&gt; hpi_large_2 = HighPrecisionInt(BigInt(987654321098765))
+HighPrecisionInt(987654321098765, coeffs=[821579789, 229956])
+
+julia&gt; hpi_large_1 * hpi_large_2
+HighPrecisionInt(14417890538969770277, coeffs=[1371679013, 3356926734, 2315013882, 1])
+
+julia&gt; hpi_large_3 = HighPrecisionInt(BigInt(12345678901234567890123))
+HighPrecisionInt(4807115922877859019, coeffs=[1900168395, 1119243894, 669])
+
+julia&gt; hpi_large_4 = HighPrecisionInt(-BigInt(98765432109876543210987))
+HighPrecisionInt(-1564339235603858923, coeffs=[509593067, 364226111, 5354])
+
+julia&gt; hpi_large_3 * hpi_large_4
+HighPrecisionInt(-12206592816479624537, coeffs=[1209687385, 2842068862, 4008437551, 4196447926, 3583277])</code></pre></li></ul><h3 id="Macros"><a class="docs-heading-anchor" href="#Macros">🧩 Macros</a><a id="Macros-1"></a><a class="docs-heading-anchor-permalink" href="#Macros" title="Permalink"></a></h3><p><code>@hpi_str(s::String)</code></p><ul><li><p>Constructs a <code>HighPrecisionInt</code> from a string literal <code>s</code> (decimal or &quot;0x&quot; prefixed hex).</p><p><strong>Usage</strong></p><pre><code class="language-julia-repl hljs">julia&gt; hpi&quot;12345678901234567890&quot;
+HighPrecisionInt(12345678901234567890, coeffs=[3944680146, 2874452364])
+
+julia&gt; hpi&quot;-0xABCDEF&quot;
+HighPrecisionInt(-11259375, coeffs=[11259375])
+
+julia&gt; hpi&quot;1234567890123456789012345678901234567890&quot;
+HighPrecisionInt(12446928571455179474, coeffs=[3460238034, 2898026390, 3235640248, 2697535605, 3])</code></pre></li></ul><h3 id="Display"><a class="docs-heading-anchor" href="#Display">🖥️ Display</a><a id="Display-1"></a><a class="docs-heading-anchor-permalink" href="#Display" title="Permalink"></a></h3><p><code>Base.show(io::IO, hpi::HighPrecisionInt)</code></p><p>Defines how <code>HighPrecisionInt</code> are displayed when printed, showing their equivalent decimal value and coefficients in little-endian order. </p><p><strong>Usage</strong></p><p>```jldoctest   julia&gt; hpi_1 = HighPrecisionInt(99999999999999999999)   HighPrecisionInt(99999999999999999999, coeffs=[1775798783, 1260799867, 23])</p><p>julia&gt; hpi_2 = HighPrecisionInt(-1234567890)   HighPrecisionInt(-1234567890, coeffs=[1234567890])</p><p>julia&gt; hpi_3 = HighPrecisionInt(0)   HighPrecisionInt(0, coeffs=[0])   ```</p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../HighPrecisionLinearAlgebra/">High Precision Linear Algebra »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.12.0 on <span class="colophon-date" title="Saturday 14 June 2025 17:38">Saturday 14 June 2025</span>. Using Julia version 1.11.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
